# CPF-Smart-Analyzer

./: CPF_Smart_Analyzer.spec  README.md
cpf_analyzer/: README.md  __init__.py  batch.py  cli.py  core.py  gui.py  heuristics.py  pyproject.toml  report.py
tests/: test_core.py  test_heuristics.py
